; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Neo/extr_NDIS5.c_NeoNewEvent.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Neo/extr_NDIS5.c_NeoNewEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32 }

@NotificationEvent = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @NeoNewEvent(i8* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %53

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i32* @NewUnicode(i8* %10)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %53

15:                                               ; preds = %9
  %16 = call %struct.TYPE_5__* @NeoZeroMalloc(i32 16)
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %5, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %18 = icmp eq %struct.TYPE_5__* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @FreeUnicode(i32* %20)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %53

22:                                               ; preds = %15
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @GetUnicode(i32* %23)
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = call i32* @IoCreateNotificationEvent(i32 %24, i32* %26)
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  store i32* %27, i32** %29, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %22
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %36 = call i32 @NeoFree(%struct.TYPE_5__* %35)
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @FreeUnicode(i32* %37)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %53

39:                                               ; preds = %22
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = load i32*, i32** %41, align 8
  %43 = load i32, i32* @NotificationEvent, align 4
  %44 = load i32, i32* @FALSE, align 4
  %45 = call i32 @KeInitializeEvent(i32* %42, i32 %43, i32 %44)
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %46, i32 0, i32 0
  %48 = load i32*, i32** %47, align 8
  %49 = call i32 @KeClearEvent(i32* %48)
  %50 = load i32*, i32** %4, align 8
  %51 = call i32 @FreeUnicode(i32* %50)
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %52, %struct.TYPE_5__** %2, align 8
  br label %53

53:                                               ; preds = %39, %34, %19, %14, %8
  %54 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  ret %struct.TYPE_5__* %54
}

declare dso_local i32* @NewUnicode(i8*) #1

declare dso_local %struct.TYPE_5__* @NeoZeroMalloc(i32) #1

declare dso_local i32 @FreeUnicode(i32*) #1

declare dso_local i32* @IoCreateNotificationEvent(i32, i32*) #1

declare dso_local i32 @GetUnicode(i32*) #1

declare dso_local i32 @NeoFree(%struct.TYPE_5__*) #1

declare dso_local i32 @KeInitializeEvent(i32*, i32, i32) #1

declare dso_local i32 @KeClearEvent(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
